src/objects/Partner_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox allows the operator to turn alerts on/off on the partner portal.</description>
        <inlineHelpText>True - Visible on Partner Portal
False - Not Visible on Partner Portal</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Body__c</fullName>
        <label>Alert Body</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Managers</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This is the date in which the alert was created</description>
        <inlineHelpText>Date of Creation</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Optional__c</fullName>
        <description>Use this date to expire a Partner Alert via workflow.</description>
        <inlineHelpText>Use this date to expire a Partner Alert via workflow on the desired date.  If you do not want to ever expire the workflow leave this blank.</inlineHelpText>
        <label>Expiration Date (Optional)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <description>This allows for the user to signify the level of importance of this alert. It determines the color and location of the alert on the portal. Alerts labeled as 1 go front and center on the dashboard in a bright red text and pop-up upon login. Level 2 alerts are placed at the top, however they are not in colored in red. Level 3 alerts are placed in the alerts tab of the portal, where the partner has to click into in order to view.</description>
        <inlineHelpText>1 - Urgent
2 - Important
3 - Standard</inlineHelpText>
        <label>Importance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The relationship to the Sales Team object</description>
        <label>Sales Representative</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Partner Alerts</relationshipLabel>
        <relationshipName>Partner_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner Alert</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Alerts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>